--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>application meteo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <h1>Meteo</h1>
     <div class="container">
         <div class="search">
             <label for="search-box">Entrez une ville</label>
-            <input type="text" id="search-box" name="search-box">
-            <button id="search-button">Rechercher</button>
+            <div class="search-container">
+                <input type="text" id="search-box" name="search-box">
+                <button id="search-button">Rechercher</button>
+            </div>
         </div>
     </div>
     <div class="container">
